nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: url-shortener
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/part-of: url-shortener
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/part-of: url-shortener
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: nginx
          image: cr.yandex/crpogeb659nijsu3456s/nginx:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
