nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: url-shortener
    app.kubernetes.io/component: frontend
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: url-shortener
  ports:
    - name: http
      port: 80
      targetPort: 80
