redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: url-shortener
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: url-shortener
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
